<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/small_window_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">

    <RelativeLayout
        android:id="@+id/menu_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/client_btn"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_below="@+id/top_btn"
            android:layout_toRightOf="@+id/left_btn"
            android:background="@drawable/bg_float"
            android:text="@string/start"
            android:textColor="#ffffff"
            android:textSize="@dimen/bigtextsize" />

        <RelativeLayout
            android:id="@+id/left_btn"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_alignTop="@+id/client_btn"
            android:background="@xml/shape"
            android:text="@string/leftIcon"
            android:textColor="#ffffff"
            android:textSize="@dimen/bigtextsize"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/top_btn"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_alignLeft="@+id/client_btn"
            android:background="@xml/shape"
            android:text="@string/topIcon"
            android:textColor="#ffffff"
            android:textSize="@dimen/bigtextsize"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/right_btn"

            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_alignTop="@+id/client_btn"
            android:layout_toRightOf="@+id/client_btn"
            android:background="@xml/shape"
            android:text="@string/rightIcon"
            android:textColor="#ffffff"
            android:textSize="@dimen/bigtextsize"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/bottom_btn"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_alignLeft="@+id/top_btn"
            android:layout_below="@id/client_btn"
            android:background="@xml/shape"
            android:text="@string/bottomIcon"
            android:textColor="#ffffff"
            android:textSize="@dimen/bigtextsize"
            android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>