<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/big_window_layout"
    >

    <RelativeLayout
        android:id="@+id/menu_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginTop="@dimen/bigheight"
            android:layout_marginLeft="@dimen/bigwidth"
            android:id="@+id/fanhui"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:textColor="#ffffff"
            android:textSize="@dimen/bigtextsize"
            android:background="@xml/shape"
            android:text="@string/rt"
            />
        <Button
            android:id="@+id/topBtn"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_alignLeft="@+id/fanhui"
            android:background="@xml/shape"
            android:textSize="@dimen/bigtextsize"
            android:text="@string/topIcon" />
        <Button
            android:id="@+id/bottomBtn"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_below="@+id/fanhui"
            android:layout_alignLeft="@+id/fanhui"
            android:background="@xml/shape"
            android:textSize="@dimen/bigtextsize"
            android:text="@string/bottomIcon" />
        <Button
            android:id="@+id/leftBtn"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_alignTop="@+id/fanhui"
            android:background="@xml/shape"
            android:textSize="@dimen/bigtextsize"
            android:text="@string/leftIcon" />
        <Button
            android:id="@+id/rightBtn"
            android:layout_width="@dimen/bigwidth"
            android:layout_height="@dimen/bigheight"
            android:layout_alignTop="@+id/fanhui"
            android:layout_toRightOf="@+id/fanhui"
            android:background="@xml/shape"
            android:textSize="@dimen/bigtextsize"
            android:text="@string/rightIcon" />
    </RelativeLayout>




</RelativeLayout>
